<resources>
    <string name="app_name">Gachi Database</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="_69">69</string>
    <string name="white_skin">White skin</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="enter_age">Enter age</string>
    <string name="enter_name">Enter name</string>
    <string name="negr">Slave</string>
    <string-array name="entries">
        <item>Name</item>
        <item>Age</item>
    </string-array>
    <string-array name="entriesValues">
        <item>name</item>
        <item>age</item>
    </string-array>

    <string-array name="filterEntries">
        <item>All Boys</item>
        <item>Only Young</item>
        <item>Only Old</item>
    </string-array>
    <string-array name="filterEntriesValues">
        <item>id NOT NULL</item>
        <item>age &#60; 40</item>
        <item>age &#62; 39</item>
    </string-array>
</resources>